fix layout bug

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -461,7 +461,7 @@ a.flag {
 					text-shadow:1px 2px 0 rgba(0,0,0,0.1);
 					font:26px "goodcyr-book", Arial, Helvetica, sans-serif;
 					}
-				.section.community ul {
+				.section.community .section__text ul {
 					text-align:left;
 					width:600px;
 					color:#000;
